   - dtucker@cvs.openbsd.org 2007/10/29 06:51:59
     [ssh_config.5]
     ProxyCommand and LocalCommand use the user's shell, not /bin/sh; ok djm@
   - dtucker@cvs.openbsd.org 2007/10/29 06:54:50
     [ssh.c]
     Make LocalCommand work for Protocol 1 too; ok djm@
   - jmc@cvs.openbsd.org 2007/10/29 07:48:19
     [ssh_config.5]
     clean up after previous macro removal;

20071030
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2007/10/29 23:49:41
     [openbsd-compat/sys-tree.h]
     remove extra backslash at the end of RB_PROTOTYPE, report from
     Jan.Pechanec AT Sun.COM; ok deraadt@

20071026
 - (djm) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2007/09/11 23:49:09
     [sshpty.c]
     remove #if defined block not needed; ok markus@ dtucker@
     (NB. RCD ID sync only for portable)
   - djm@cvs.openbsd.org 2007/09/21 03:05:23
     [ssh_config.5]
     document KbdInteractiveAuthentication in ssh_config.5;
     patch from dkg AT fifthhorseman.net
   - djm@cvs.openbsd.org 2007/09/21 08:15:29
     [auth-bsdauth.c auth-passwd.c auth.c auth.h auth1.c auth2-chall.c]
     [monitor.c monitor_wrap.c]
     unifdef -DBSD_AUTH
     unifdef -USKEY
     These options have been in use for some years;
     ok markus@ "no objection" millert@
     (NB. RCD ID sync only for portable)
   - canacar@cvs.openbsd.org 2007/09/25 23:48:57
     [ssh-agent.c]
     When adding a key that already exists, update the properties
     (time, confirm, comment) instead of discarding them. ok djm@ markus@
   - ray@cvs.openbsd.org 2007/09/27 00:15:57
     [dh.c]
     Don't return -1 on error in dh_pub_is_valid(), since it evaluates
     to true.
     Also fix a typo.
     Initial diff from Matthew Dempsky, input from djm.
     OK djm, markus.
   - dtucker@cvs.openbsd.org 2007/09/29 00:25:51
     [auth2.c]
     Remove unused prototype.  ok djm@
   - chl@cvs.openbsd.org 2007/10/02 17:49:58
     [ssh-keygen.c]
     handles zero-sized strings that fgets can return